book: update tr
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/tr/v2/Başlangıç-Git-Nedir?.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Git-Nedir?.html
@@ -19,6 +19,8 @@ title: Git - Git Nedir?
 url: "/book/tr/v2/Başlangıç-Git-Nedir?.html"
 aliases:
 - "/book/tr/v2/Başlangıç-Git-Nedir.html"
+- "/book/tr/Başlangıç-Git-in-Temelleri.html"
+- "/book/tr/v1/Başlangıç-Git-in-Temelleri.html"
 ---
 <h2 id="_git_nedir">Git Nedir?</h2>
 <div class="paragraph">
