--- a/external/book/content/book/tr/v2/Başlangıç-Git’i-Yüklemek.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Git’i-Yüklemek.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Başlangıç-Git’i-İlk-Defa-Kurmak
 title: Git - Git’i Yüklemek
 url: "/book/tr/v2/Başlangıç-Git’i-Yüklemek.html"
+aliases:
+- "/book/tr/Başlangıç-Git-in-Kurulumu.html"
+- "/book/tr/v1/Başlangıç-Git-in-Kurulumu.html"
 ---
 <h2 id="_giti_yüklemek">Git’i Yüklemek</h2>
 <div class="paragraph">
