--- a/external/book/content/book/tr/v2/Başlangıç-Git’i-İlk-Defa-Kurmak.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Git’i-İlk-Defa-Kurmak.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Başlangıç-Yardım-Almak
 title: Git - Git’i İlk Defa Kurmak
 url: "/book/tr/v2/Başlangıç-Git’i-İlk-Defa-Kurmak.html"
+aliases:
+- "/book/tr/Başlangıç-İlk-Ayarlamalar.html"
+- "/book/tr/v1/Başlangıç-İlk-Ayarlamalar.html"
 ---
 <h2 id="_first_time">Git’i İlk Defa Kurmak</h2>
 <div class="paragraph">
