--- a/external/book/content/book/tr/v2/Başlangıç-Git’in-Kısa-Tarihçesi.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Git’in-Kısa-Tarihçesi.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Başlangıç-Git-Nedir%3F
 title: Git - Git’in Kısa Tarihçesi
 url: "/book/tr/v2/Başlangıç-Git’in-Kısa-Tarihçesi.html"
+aliases:
+- "/book/tr/Başlangıç-Git-in-Kısa-Bir-Tarihçesi.html"
+- "/book/tr/v1/Başlangıç-Git-in-Kısa-Bir-Tarihçesi.html"
 ---
 <h2 id="_gitin_kısa_tarihçesi">Git’in Kısa Tarihçesi</h2>
 <div class="paragraph">
