--- a/external/book/content/book/tr/v2/Başlangıç-Sürüm-Denetimi.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Sürüm-Denetimi.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Başlangıç-Git’in-Kısa-Tarihçesi
 title: Git - Sürüm Denetimi
 url: "/book/tr/v2/Başlangıç-Sürüm-Denetimi.html"
+aliases:
+- "/book/tr/Başlangıç.html"
+- "/book/tr/v1/Başlangıç.html"
+- "/book/tr/Başlangıç-Sürüm-Kontrolü-Hakkında.html"
+- "/book/tr/v1/Başlangıç-Sürüm-Kontrolü-Hakkında.html"
 ---
 <p>Bu bölümde Git kullanımı hakkında temel bilgileri bulacaksınız.
 İşe, sürüm kontrol sistemleri hakkında açıklamalarla başlayacağız; daha sonra Git kurulumunun nasıl yapılacağını, en son olarak da aracın yapılandırma ve kullanımını açıklayacağız.
