--- a/external/book/content/book/tr/v2/Başlangıç-Özet.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama
 title: Git - Özet
 url: "/book/tr/v2/Başlangıç-Özet.html"
+aliases:
+- "/book/tr/Başlangıç-Özet.html"
+- "/book/tr/v1/Başlangıç-Özet.html"
 ---
 <h2 id="_özet">Özet</h2>
 <div class="paragraph">
