--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Bir-Sunucuda-Git-Kurma.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Bir-Sunucuda-Git-Kurma.html
@@ -16,6 +16,9 @@ book:
     previous: book/tr/v2/Bir-Sunucuda-Git-Kurma-İletişim-Kuralları-Protocols
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-SSH-Ortak-Anahtarınızı-Oluşturma
 title: Git - Bir Sunucuda Git Kurma
+aliases:
+- "/book/tr/Git-on-the-Server-Getting-Git-on-a-Server.html"
+- "/book/tr/v1/Git-on-the-Server-Getting-Git-on-a-Server.html"
 ---
 <h2 id="_getting_git_on_a_server">Bir Sunucuda Git Kurma</h2>
 <div class="paragraph">
