--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Git-Cini-Daemon.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Git-Cini-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/tr/v2/Bir-Sunucuda-Git-Kurma-Sunucu-Kurma
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-Akıllı-HTTP
 title: Git - Git Cini (Daemon)
+aliases:
+- "/book/tr/Git-on-the-Server-Git-Daemon.html"
+- "/book/tr/v1/Git-on-the-Server-Git-Daemon.html"
 ---
 <h2 id="_git_cini_daemon">Git Cini (Daemon)</h2>
 <div class="paragraph">
