--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-SSH-Ortak-Anahtarınızı-Oluşturma.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-SSH-Ortak-Anahtarınızı-Oluşturma.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-Sunucu-Kurma
 title: Git - SSH Ortak Anahtarınızı Oluşturma
 url: "/book/tr/v2/Bir-Sunucuda-Git-Kurma-SSH-Ortak-Anahtarınızı-Oluşturma.html"
+aliases:
+- "/book/tr/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
+- "/book/tr/v1/Git-on-the-Server-Generating-Your-SSH-Public-Key.html"
 ---
 <h2 id="_generate_ssh_key">SSH Ortak Anahtarınızı Oluşturma</h2>
 <div class="paragraph">
