--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Sunucu-Kurma.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Sunucu-Kurma.html
@@ -16,6 +16,9 @@ book:
     previous: book/tr/v2/Bir-Sunucuda-Git-Kurma-SSH-Ortak-Anahtarınızı-Oluşturma
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-Git-Cini-Daemon
 title: Git - Sunucu Kurma
+aliases:
+- "/book/tr/Git-on-the-Server-Setting-Up-the-Server.html"
+- "/book/tr/v1/Git-on-the-Server-Setting-Up-the-Server.html"
 ---
 <h2 id="_setting_up_server">Sunucu Kurma</h2>
 <div class="paragraph">
