--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Özet.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dağıtık-Git-Dağıtık-İş-Akışları
 title: Git - Özet
 url: "/book/tr/v2/Bir-Sunucuda-Git-Kurma-Özet.html"
+aliases:
+- "/book/tr/Git-on-the-Server-Summary.html"
+- "/book/tr/v1/Git-on-the-Server-Summary.html"
 ---
 <h2 id="_özet_4">Özet</h2>
 <div class="paragraph">
