--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Üçüncü-Taraf-Barındırma-Hosting-Seçenekleri.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-Üçüncü-Taraf-Barındırma-Hosting-Seçenekleri.html
@@ -17,6 +17,17 @@ book:
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-Özet
 title: Git - Üçüncü Taraf Barındırma (Hosting) Seçenekleri
 url: "/book/tr/v2/Bir-Sunucuda-Git-Kurma-Üçüncü-Taraf-Barındırma-Hosting-Seçenekleri.html"
+aliases:
+- "/book/tr/Git-on-the-Server-Public-Access.html"
+- "/book/tr/v1/Git-on-the-Server-Public-Access.html"
+- "/book/tr/Git-on-the-Server-GitWeb.html"
+- "/book/tr/v1/Git-on-the-Server-GitWeb.html"
+- "/book/tr/Git-on-the-Server-Gitosis.html"
+- "/book/tr/v1/Git-on-the-Server-Gitosis.html"
+- "/book/tr/Git-on-the-Server-Gitolite.html"
+- "/book/tr/v1/Git-on-the-Server-Gitolite.html"
+- "/book/tr/Git-on-the-Server-Hosted-Git.html"
+- "/book/tr/v1/Git-on-the-Server-Hosted-Git.html"
 ---
 <h2 id="_üçüncü_taraf_barındırma_hosting_seçenekleri">Üçüncü Taraf Barındırma (Hosting) Seçenekleri</h2>
 <div class="paragraph">
