--- a/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-İletişim-Kuralları-Protocols.html
+++ b/external/book/content/book/tr/v2/Bir-Sunucuda-Git-Kurma-İletişim-Kuralları-Protocols.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-Bir-Sunucuda-Git-Kurma
 title: Git - İletişim Kuralları (Protocols)
 url: "/book/tr/v2/Bir-Sunucuda-Git-Kurma-İletişim-Kuralları-Protocols.html"
+aliases:
+- "/book/tr/Git-on-the-Server.html"
+- "/book/tr/v1/Git-on-the-Server.html"
+- "/book/tr/Git-on-the-Server-The-Protocols.html"
+- "/book/tr/v1/Git-on-the-Server-The-Protocols.html"
 ---
 <p>
 Şu aşamada, Git’i kullanacağınız günlük görevlerin çoğunu yapabilecek durumda olmalısınız.
