--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Bakım-ve-Veri-Kurtarma.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Bakım-ve-Veri-Kurtarma.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Ortam-Değişkenleri
 title: Git - Bakım ve Veri Kurtarma
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Bakım-ve-Veri-Kurtarma.html"
+aliases:
+- "/book/tr/Git-Internals-Maintenance-and-Data-Recovery.html"
+- "/book/tr/v1/Git-Internals-Maintenance-and-Data-Recovery.html"
 ---
 <h2 id="_bakım_ve_veri_kurtarma">Bakım ve Veri Kurtarma</h2>
 <div class="paragraph">
