--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Git-Nesneleri.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Git-Nesneleri.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Git-Referansları
 title: Git - Git Nesneleri
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Git-Nesneleri.html"
+aliases:
+- "/book/tr/Git-Internals-Git-Objects.html"
+- "/book/tr/v1/Git-Internals-Git-Objects.html"
 ---
 <h2 id="_objects">Git Nesneleri</h2>
 <div class="paragraph">
