--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Packfiles.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Packfiles.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Refspec
 title: Git - Packfiles
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Packfiles.html"
+aliases:
+- "/book/tr/Git-Internals-Packfiles.html"
+- "/book/tr/v1/Git-Internals-Packfiles.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
