--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Refspec.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Refspec.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Transfer-Protokolleri
 title: Git - Refspec
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Refspec.html"
+aliases:
+- "/book/tr/Git-Internals-The-Refspec.html"
+- "/book/tr/v1/Git-Internals-The-Refspec.html"
 ---
 <h2 id="_refspec">Refspec</h2>
 <div class="paragraph">
