--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Tesisat-ve-Döşeme-Plumbing-ve-Porcelain.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Tesisat-ve-Döşeme-Plumbing-ve-Porcelain.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Git-Nesneleri
 title: Git - Tesisat ve Döşeme (Plumbing ve Porcelain)
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Tesisat-ve-Döşeme-Plumbing-ve-Porcelain.html"
+aliases:
+- "/book/tr/Git-Internals.html"
+- "/book/tr/v1/Git-Internals.html"
+- "/book/tr/Git-Internals-Plumbing-and-Porcelain.html"
+- "/book/tr/v1/Git-Internals-Plumbing-and-Porcelain.html"
 ---
 <p>Bu bölüme çok daha öndeki bir bölümden atlamış olabilir veya kitabın geri kalanını sırayla okuyarak bu noktaya gelmiş olabilirsiniz. Her iki durumda da, bu bölümde Git’in iç işleyişini ve uygulanmasını ele alacağız.
 Şunu keşfettik ki bu bilginin anlaşılması, Git’in ne kadar kullanışlı ve güçlü olduğunu kavramak için temel önem taşımaktadır, ancak diğerleri bize bu bilgilerin yeni başlayanlar için kafa karıştırıcı ve gereksiz ölçüde karmaşık olabileceğini savundular. Bu nedenle, bu tartışmayı kitaptaki son bölüm yaptık.
