--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Transfer-Protokolleri.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Transfer-Protokolleri.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Bakım-ve-Veri-Kurtarma
 title: Git - Transfer Protokolleri
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Transfer-Protokolleri.html"
+aliases:
+- "/book/tr/Git-Internals-Transfer-Protocols.html"
+- "/book/tr/v1/Git-Internals-Transfer-Protocols.html"
 ---
 <h2 id="_transfer_protokolleri">Transfer Protokolleri</h2>
 <div class="paragraph">
