--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Özet.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Ek-bölüm-A:-Diğer-Ortamlarda-Git-Görsel-Arayüzler
 title: Git - Özet
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Özet.html"
+aliases:
+- "/book/tr/Git-Internals-Summary.html"
+- "/book/tr/v1/Git-Internals-Summary.html"
 ---
 <h2 id="_özet_14">Özet</h2>
 <div class="paragraph">
