--- a/external/book/content/book/tr/v2/Dağıtık-Git-Bir-Projeyi-Yürütme.html
+++ b/external/book/content/book/tr/v2/Dağıtık-Git-Bir-Projeyi-Yürütme.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dağıtık-Git-Özet
 title: Git - Bir Projeyi Yürütme
 url: "/book/tr/v2/Dağıtık-Git-Bir-Projeyi-Yürütme.html"
+aliases:
+- "/book/tr/Distributed-Git-Maintaining-a-Project.html"
+- "/book/tr/v1/Distributed-Git-Maintaining-a-Project.html"
 ---
 <h2 id="_bir_projeyi_yürütme">Bir Projeyi Yürütme</h2>
 <div class="paragraph">
