--- a/external/book/content/book/tr/v2/Dağıtık-Git-Dağıtık-İş-Akışları.html
+++ b/external/book/content/book/tr/v2/Dağıtık-Git-Dağıtık-İş-Akışları.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Dağıtık-Git-Projenin-Gelişiminde-Rol-Almak
 title: Git - Dağıtık İş Akışları
 url: "/book/tr/v2/Dağıtık-Git-Dağıtık-İş-Akışları.html"
+aliases:
+- "/book/tr/Distributed-Git.html"
+- "/book/tr/v1/Distributed-Git.html"
+- "/book/tr/Distributed-Git-Distributed-Workflows.html"
+- "/book/tr/v1/Distributed-Git-Distributed-Workflows.html"
 ---
 <p>
 Artık diğer geliştiricilerle ortak bir proje üzerinde çalışırken kodlarınızı paylaşmak üzere kurulmuş bir uzak Git deposuna sahipsiniz ve yerel bir iş akışında temel Git komutlarına aşina olduğunuz için, Git’in size sunduğu dağıtık iş akışlarını nasıl kullanacağınıza bakacaksınız.</p><p>Bu bölümde, dağıtık bir ortamda bir katkı sağlayıcı ve proje yöneticisi olarak Git ile nasıl çalışılacağını göreceksiniz.
