--- a/external/book/content/book/tr/v2/Dağıtık-Git-Projenin-Gelişiminde-Rol-Almak.html
+++ b/external/book/content/book/tr/v2/Dağıtık-Git-Projenin-Gelişiminde-Rol-Almak.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dağıtık-Git-Bir-Projeyi-Yürütme
 title: Git - Projenin Gelişiminde Rol Almak
 url: "/book/tr/v2/Dağıtık-Git-Projenin-Gelişiminde-Rol-Almak.html"
+aliases:
+- "/book/tr/Distributed-Git-Contributing-to-a-Project.html"
+- "/book/tr/v1/Distributed-Git-Contributing-to-a-Project.html"
 ---
 <h2 id="_contributing_project">Projenin Gelişiminde Rol Almak</h2>
 <div class="paragraph">
