--- a/external/book/content/book/tr/v2/Dağıtık-Git-Özet.html
+++ b/external/book/content/book/tr/v2/Dağıtık-Git-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/GitHub-Bir-Projeye-Katkıda-Bulunmak
 title: Git - Özet
 url: "/book/tr/v2/Dağıtık-Git-Özet.html"
+aliases:
+- "/book/tr/Distributed-Git-Summary.html"
+- "/book/tr/v1/Distributed-Git-Summary.html"
 ---
 <h2 id="_özet_6">Özet</h2>
 <div class="paragraph">
