--- a/external/book/content/book/tr/v2/Ek-bölüm-C:-Git-Komutları-Kurulum-ve-Yapılandırma-Komutları.html
+++ b/external/book/content/book/tr/v2/Ek-bölüm-C:-Git-Komutları-Kurulum-ve-Yapılandırma-Komutları.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Ek-bölüm-C:-Git-Komutları-Proje-Oluşturma-Komutları
 title: Git - Kurulum ve Yapılandırma Komutları
 url: "/book/tr/v2/Ek-bölüm-C:-Git-Komutları-Kurulum-ve-Yapılandırma-Komutları.html"
+aliases:
+- "/book/tr/commands.html"
+- "/book/tr/v1/commands.html"
 ---
 <p>Kitap boyunca düzinelerce Git komutunu tanıttık ve bunları bir anlatı içerisinde tanıtmak için çok çalıştık, yavaş yavaş hikayeye daha fazla komut ekledik.
 Ancak bu bizi tüm kitap boyunca dağılmış halde komutların kullanım örnekleriyle karşı karşıya bırakıyor.</p><p>Bu ekte, kitap boyunca ele aldığımız tüm Git komutlarını kabaca ne için kullanıldıklarına göre gruplandırılmış olarak inceleyeceğiz.
