--- a/external/book/content/book/tr/v2/Git-Araçları-Alt-Modüller.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Alt-Modüller.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Demetleme-Bundling
 title: Git - Alt Modüller
 url: "/book/tr/v2/Git-Araçları-Alt-Modüller.html"
+aliases:
+- "/book/tr/Git-Tools-Submodules.html"
+- "/book/tr/v1/Git-Tools-Submodules.html"
 ---
 <h2 id="_git_submodules">Alt Modüller</h2>
 <div class="paragraph">
