--- a/external/book/content/book/tr/v2/Git-Araçları-Düzeltme-Seçimi.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Düzeltme-Seçimi.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Git-Araçları-Etkileşimli-İzlemleme-Staging
 title: Git - Düzeltme Seçimi
 url: "/book/tr/v2/Git-Araçları-Düzeltme-Seçimi.html"
+aliases:
+- "/book/tr/Git-Tools.html"
+- "/book/tr/v1/Git-Tools.html"
+- "/book/tr/Git-Tools-Revision-Selection.html"
+- "/book/tr/v1/Git-Tools-Revision-Selection.html"
 ---
 <p>Şimdiye kadar, kaynak kod kontrolü için bir Git reposunu yönetmek veya sürdürmek için ihtiyacınız olan günlük komutları ve iş akışlarının çoğunu öğrendiniz.
 Dosyaları izleme ve katkılama gibi temel görevleri başardınız ve ayrıca konu dalları oluşturma ve birleştirme gücünü de kullandınız.</p><p>Şimdi, günlük olarak kullanmasanız da, bir noktada ihtiyacınız olabilecek çok güçlü şeyleri keşfedeceksiniz.</p>
