--- a/external/book/content/book/tr/v2/Git-Araçları-Etkileşimli-İzlemleme-Staging.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Etkileşimli-İzlemleme-Staging.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Saklama-ve-Silme
 title: Git - Etkileşimli İzlemleme (Staging)
 url: "/book/tr/v2/Git-Araçları-Etkileşimli-İzlemleme-Staging.html"
+aliases:
+- "/book/tr/Git-Tools-Interactive-Staging.html"
+- "/book/tr/v1/Git-Tools-Interactive-Staging.html"
 ---
 <h2 id="_interactive_staging">Etkileşimli İzlemleme (Staging)</h2>
 <div class="paragraph">
