--- a/external/book/content/book/tr/v2/Git-Araçları-Geçmişi-Yeniden-Yazma.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Geçmişi-Yeniden-Yazma.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Reset-Komutunun-Gizemleri
 title: Git - Geçmişi Yeniden Yazma
 url: "/book/tr/v2/Git-Araçları-Geçmişi-Yeniden-Yazma.html"
+aliases:
+- "/book/tr/Git-Tools-Rewriting-History.html"
+- "/book/tr/v1/Git-Tools-Rewriting-History.html"
 ---
 <h2 id="_rewriting_history">Geçmişi Yeniden Yazma</h2>
 <div class="paragraph">
