--- a/external/book/content/book/tr/v2/Git-Araçları-Git’le-Hata-Ayıklama.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Git’le-Hata-Ayıklama.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Alt-Modüller
 title: Git - Git’le Hata Ayıklama
 url: "/book/tr/v2/Git-Araçları-Git’le-Hata-Ayıklama.html"
+aliases:
+- "/book/tr/Git-Tools-Debugging-with-Git.html"
+- "/book/tr/v1/Git-Tools-Debugging-with-Git.html"
 ---
 <h2 id="_gitle_hata_ayıklama">Git’le Hata Ayıklama</h2>
 <div class="paragraph">
