--- a/external/book/content/book/tr/v2/Git-Araçları-Saklama-ve-Silme.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Saklama-ve-Silme.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Çalışmanızı-İmzalama
 title: Git - Saklama ve Silme
 url: "/book/tr/v2/Git-Araçları-Saklama-ve-Silme.html"
+aliases:
+- "/book/tr/Git-Tools-Stashing.html"
+- "/book/tr/v1/Git-Tools-Stashing.html"
 ---
 <h2 id="_git_stashing">Saklama ve Silme</h2>
 <div class="paragraph">
