--- a/external/book/content/book/tr/v2/Git-Araçları-Özet.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git’i-Özelleştirmek-Git-Yapılandırması
 title: Git - Özet
 url: "/book/tr/v2/Git-Araçları-Özet.html"
+aliases:
+- "/book/tr/Git-Tools-Summary.html"
+- "/book/tr/v1/Git-Tools-Summary.html"
 ---
 <h2 id="_özet_10">Özet</h2>
 <div class="paragraph">
