--- a/external/book/content/book/tr/v2/Git-Araçları-İleri-Seviye-Birleştirme.html
+++ b/external/book/content/book/tr/v2/Git-Araçları-İleri-Seviye-Birleştirme.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Araçları-Rerere
 title: Git - İleri Seviye Birleştirme
 url: "/book/tr/v2/Git-Araçları-İleri-Seviye-Birleştirme.html"
+aliases:
+- "/book/tr/Git-Tools-Subtree-Merging.html"
+- "/book/tr/v1/Git-Tools-Subtree-Merging.html"
 ---
 <h2 id="_advanced_merging">İleri Seviye Birleştirme</h2>
 <div class="paragraph">
