--- a/external/book/content/book/tr/v2/Git-Dalları-Dal-Yönetimi.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Dal-Yönetimi.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-İş-Akışı-Dallandırması
 title: Git - Dal Yönetimi
 url: "/book/tr/v2/Git-Dalları-Dal-Yönetimi.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Dal-Yönetimi.html"
+- "/book/tr/v1/Git-te-Dallanma-Dal-Yönetimi.html"
 ---
 <h2 id="_branch_management">Dal Yönetimi</h2>
 <div class="paragraph">
