--- a/external/book/content/book/tr/v2/Git-Dalları-Dallar.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Dallar.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Git-Dalları-Kısaca-Dallandırma-ve-Birleştirme-Temelleri
 title: Git - Dallar
 url: "/book/tr/v2/Git-Dalları-Dallar.html"
+aliases:
+- "/book/tr/Git-te-Dallanma.html"
+- "/book/tr/v1/Git-te-Dallanma.html"
+- "/book/tr/Git-te-Dallanma-Dal-Nedir?.html"
+- "/book/tr/v1/Git-te-Dallanma-Dal-Nedir?.html"
 ---
 <p>
 Neredeyse her sürüm kontrol sisteminin (VCS) bir tür dal desteği vardır.
