--- a/external/book/content/book/tr/v2/Git-Dalları-Kısaca-Dallandırma-ve-Birleştirme-Temelleri.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Kısaca-Dallandırma-ve-Birleştirme-Temelleri.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-Dal-Yönetimi
 title: Git - Kısaca Dallandırma ve Birleştirme Temelleri
 url: "/book/tr/v2/Git-Dalları-Kısaca-Dallandırma-ve-Birleştirme-Temelleri.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Dallanma-ve-Birleştirmenin-Temelleri.html"
+- "/book/tr/v1/Git-te-Dallanma-Dallanma-ve-Birleştirmenin-Temelleri.html"
 ---
 <h2 id="_kısaca_dallandırma_ve_birleştirme_temelleri">Kısaca Dallandırma ve Birleştirme Temelleri</h2>
 <div class="paragraph">
