--- a/external/book/content/book/tr/v2/Git-Dalları-Uzak-Dallar.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Uzak-Dallar.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-Yeniden-Temelleme-rebase
 title: Git - Uzak Dallar
 url: "/book/tr/v2/Git-Dalları-Uzak-Dallar.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Uzak-Uçbirim-Dalları.html"
+- "/book/tr/v1/Git-te-Dallanma-Uzak-Uçbirim-Dalları.html"
 ---
 <h2 id="_remote_branches">Uzak Dallar</h2>
 <div class="paragraph">
