--- a/external/book/content/book/tr/v2/Git-Dalları-Yeniden-Temelleme-rebase.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Yeniden-Temelleme-rebase.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-Özet
 title: Git - Yeniden Temelleme (rebase)
 url: "/book/tr/v2/Git-Dalları-Yeniden-Temelleme-rebase.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Rebasing-##-Zemin,-Kök,-Temel.html"
+- "/book/tr/v1/Git-te-Dallanma-Rebasing-##-Zemin,-Kök,-Temel.html"
 ---
 <h2 id="_rebasing">Yeniden Temelleme (rebase)</h2>
 <div class="paragraph">
