--- a/external/book/content/book/tr/v2/Git-Dalları-Özet.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Bir-Sunucuda-Git-Kurma-İletişim-Kuralları-Protocols
 title: Git - Özet
 url: "/book/tr/v2/Git-Dalları-Özet.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Summary.html"
+- "/book/tr/v1/Git-te-Dallanma-Summary.html"
 ---
 <h2 id="_özet_3">Özet</h2>
 <div class="paragraph">
