--- a/external/book/content/book/tr/v2/Git-Dalları-İş-Akışı-Dallandırması.html
+++ b/external/book/content/book/tr/v2/Git-Dalları-İş-Akışı-Dallandırması.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-Uzak-Dallar
 title: Git - İş Akışı Dallandırması
 url: "/book/tr/v2/Git-Dalları-İş-Akışı-Dallandırması.html"
+aliases:
+- "/book/tr/Git-te-Dallanma-Dallanma-İş-Akışları.html"
+- "/book/tr/v1/Git-te-Dallanma-Dallanma-İş-Akışları.html"
 ---
 <h2 id="_i̇ş_akışı_dallandırması">İş Akışı Dallandırması</h2>
 <div class="paragraph">
