--- a/external/book/content/book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Git-Temelleri-Değişikliklerin-Repoya-Kaydedilmesi
 title: Git - Bir Git Reposu Oluşturma/Kopyalama
 url: "/book/tr/v2/Git-Temelleri-Bir-Git-Reposu-Oluşturma/Kopyalama.html"
+aliases:
+- "/book/tr/Git-in-Temelleri.html"
+- "/book/tr/v1/Git-in-Temelleri.html"
+- "/book/tr/Git-in-Temelleri-Bir-Git-Yazılım-Havuzu-Edinmek.html"
+- "/book/tr/v1/Git-in-Temelleri-Bir-Git-Yazılım-Havuzu-Edinmek.html"
 ---
 <p>Git’e başlamak için yalnızca bir bölüm okuyabilecek vaktiniz varsa, işte bu aradığınız bölümdür.
 Bu bölüm, Git’te zamanınızı harcayacağınız şeylerin büyük çoğunluğunu yapmak için ihtiyacınız olan tüm temel komutları kapsar.
