--- a/external/book/content/book/tr/v2/Git-Temelleri-Değişikliklerin-Repoya-Kaydedilmesi.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Değişikliklerin-Repoya-Kaydedilmesi.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Katkı-Geçmişini-Görüntüleme
 title: Git - Değişikliklerin Repoya Kaydedilmesi
 url: "/book/tr/v2/Git-Temelleri-Değişikliklerin-Repoya-Kaydedilmesi.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-Değişiklikleri-Yazılım-Havuzuna-Kaydetmek.html"
+- "/book/tr/v1/Git-in-Temelleri-Değişiklikleri-Yazılım-Havuzuna-Kaydetmek.html"
 ---
 <h2 id="_değişikliklerin_repoya_kaydedilmesi">Değişikliklerin Repoya Kaydedilmesi</h2>
 <div class="paragraph">
