--- a/external/book/content/book/tr/v2/Git-Temelleri-Etiketleme.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Etiketleme.html
@@ -16,6 +16,9 @@ book:
     previous: book/tr/v2/Git-Temelleri-Uzak-Repo-ile-Çalışmak
     next: book/tr/v2/Git-Temelleri-Komut-Kısayolu-Alias-Ayarlama
 title: Git - Etiketleme
+aliases:
+- "/book/tr/Git-in-Temelleri-Etiketleme.html"
+- "/book/tr/v1/Git-in-Temelleri-Etiketleme.html"
 ---
 <h2 id="_git_tagging">Etiketleme</h2>
 <div class="paragraph">
