--- a/external/book/content/book/tr/v2/Git-Temelleri-Katkı-Geçmişini-Görüntüleme.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Katkı-Geçmişini-Görüntüleme.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Değişiklikleri-Geri-Alma
 title: Git - Katkı Geçmişini Görüntüleme
 url: "/book/tr/v2/Git-Temelleri-Katkı-Geçmişini-Görüntüleme.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-Kayıt-Tarihçesini-Görüntülemek.html"
+- "/book/tr/v1/Git-in-Temelleri-Kayıt-Tarihçesini-Görüntülemek.html"
 ---
 <h2 id="_viewing_history">Katkı Geçmişini Görüntüleme</h2>
 <div class="paragraph">
