--- a/external/book/content/book/tr/v2/Git-Temelleri-Komut-Kısayolu-Alias-Ayarlama.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Komut-Kısayolu-Alias-Ayarlama.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Özet
 title: Git - Komut Kısayolu (Alias) Ayarlama
 url: "/book/tr/v2/Git-Temelleri-Komut-Kısayolu-Alias-Ayarlama.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-İpuçları.html"
+- "/book/tr/v1/Git-in-Temelleri-İpuçları.html"
 ---
 <h2 id="_git_aliases">Komut Kısayolu (Alias) Ayarlama</h2>
 <div class="paragraph">
