--- a/external/book/content/book/tr/v2/Git-Temelleri-Özet.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Dalları-Dallar
 title: Git - Özet
 url: "/book/tr/v2/Git-Temelleri-Özet.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-Özet.html"
+- "/book/tr/v1/Git-in-Temelleri-Özet.html"
 ---
 <h2 id="_özet_2">Özet</h2>
 <div class="paragraph">
