--- a/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-Git’e-Geçiş.html
+++ b/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-Git’e-Geçiş.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-ve-Diğer-Sistemler-Özet
 title: Git - Git’e Geçiş
 url: "/book/tr/v2/Git-ve-Diğer-Sistemler-Git’e-Geçiş.html"
+aliases:
+- "/book/tr/Git-and-Other-Systems-Migrating-to-Git.html"
+- "/book/tr/v1/Git-and-Other-Systems-Migrating-to-Git.html"
 ---
 <h2 id="_migrating">Git’e Geçiş</h2>
 <div class="paragraph">
