--- a/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-Özet.html
+++ b/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Tesisat-ve-Döşeme-Plumbing-ve-Porcelain
 title: Git - Özet
 url: "/book/tr/v2/Git-ve-Diğer-Sistemler-Özet.html"
+aliases:
+- "/book/tr/Git-and-Other-Systems-Summary.html"
+- "/book/tr/v1/Git-and-Other-Systems-Summary.html"
 ---
 <h2 id="_özet_13">Özet</h2>
 <div class="paragraph">
