--- a/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-İstemci-Olarak-Git.html
+++ b/external/book/content/book/tr/v2/Git-ve-Diğer-Sistemler-İstemci-Olarak-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Git-ve-Diğer-Sistemler-Git’e-Geçiş
 title: Git - İstemci Olarak Git
 url: "/book/tr/v2/Git-ve-Diğer-Sistemler-İstemci-Olarak-Git.html"
+aliases:
+- "/book/tr/Git-and-Other-Systems.html"
+- "/book/tr/v1/Git-and-Other-Systems.html"
+- "/book/tr/Git-and-Other-Systems-Git-and-Subversion.html"
+- "/book/tr/v1/Git-and-Other-Systems-Git-and-Subversion.html"
 ---
 <p>Dünya malesef mükemmel değil.
 Genellikle, dokunduğunuz her projeyi hemen Git’e geçiremezsiniz.
