--- a/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Bir-Örnek:-Mecburi-Git-Politikası.html
+++ b/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Bir-Örnek:-Mecburi-Git-Politikası.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git’i-Özelleştirmek-Özet
 title: 'Git - Bir Örnek: Mecburi Git Politikası'
 url: "/book/tr/v2/Git’i-Özelleştirmek-Bir-Örnek:-Mecburi-Git-Politikası.html"
+aliases:
+- "/book/tr/Customizing-Git-An-Example-Git-Enforced-Policy.html"
+- "/book/tr/v1/Customizing-Git-An-Example-Git-Enforced-Policy.html"
 ---
 <h2 id="_an_example_git_enforced_policy">Bir Örnek: Mecburi Git Politikası</h2>
 <div class="paragraph">
