--- a/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Kancaları-Hooks.html
+++ b/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Kancaları-Hooks.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git’i-Özelleştirmek-Bir-Örnek:-Mecburi-Git-Politikası
 title: Git - Git Kancaları (Hooks)
 url: "/book/tr/v2/Git’i-Özelleştirmek-Git-Kancaları-Hooks.html"
+aliases:
+- "/book/tr/Customizing-Git-Git-Hooks.html"
+- "/book/tr/v1/Customizing-Git-Git-Hooks.html"
 ---
 <h2 id="_git_hooks">Git Kancaları (Hooks)</h2>
 <div class="paragraph">
