--- a/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Nitelikleri.html
+++ b/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Nitelikleri.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git’i-Özelleştirmek-Git-Kancaları-Hooks
 title: Git - Git Nitelikleri
 url: "/book/tr/v2/Git’i-Özelleştirmek-Git-Nitelikleri.html"
+aliases:
+- "/book/tr/Customizing-Git-Git-Attributes.html"
+- "/book/tr/v1/Customizing-Git-Git-Attributes.html"
 ---
 <h2 id="_git_nitelikleri">Git Nitelikleri</h2>
 <div class="paragraph">
