--- a/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Yapılandırması.html
+++ b/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Git-Yapılandırması.html
@@ -17,6 +17,11 @@ book:
     next: book/tr/v2/Git’i-Özelleştirmek-Git-Nitelikleri
 title: Git - Git Yapılandırması
 url: "/book/tr/v2/Git’i-Özelleştirmek-Git-Yapılandırması.html"
+aliases:
+- "/book/tr/Customizing-Git.html"
+- "/book/tr/v1/Customizing-Git.html"
+- "/book/tr/Customizing-Git-Git-Configuration.html"
+- "/book/tr/v1/Customizing-Git-Git-Configuration.html"
 ---
 <p>Şimdiye kadar, Git’in nasıl çalıştığını ve nasıl kullanılacağını, ve kullanımınızı kolay ve verimli hale getirmek için Git’in sunduğu birçok aracı tanıttık.
 Bu bölümde, çeşitli önemli yapılandırma ayarlarını ve kancalar sistemini tanıtarak, Git’i daha özelleştirilmiş bir şekilde çalıştırmanın yollarını göreceğiz.
