--- a/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Özet.html
+++ b/external/book/content/book/tr/v2/Git’i-Özelleştirmek-Özet.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-ve-Diğer-Sistemler-İstemci-Olarak-Git
 title: Git - Özet
 url: "/book/tr/v2/Git’i-Özelleştirmek-Özet.html"
+aliases:
+- "/book/tr/Customizing-Git-Summary.html"
+- "/book/tr/v1/Customizing-Git-Summary.html"
 ---
 <h2 id="_özet_11">Özet</h2>
 <div class="paragraph">
