--- a/external/book/content/book/tr/v2/_index.html
+++ b/external/book/content/book/tr/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/tr/v2.html"
 aliases:
 - "/book/tr/v2/index.html"
+- "/book/tr/v1/index.html"
 - "/book/tr/index.html"
 ---
