--- a/external/book/content/book/tr/v2/Başlangıç-Yardım-Almak.html
+++ b/external/book/content/book/tr/v2/Başlangıç-Yardım-Almak.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Başlangıç-Özet
 title: Git - Yardım Almak
 url: "/book/tr/v2/Başlangıç-Yardım-Almak.html"
+aliases:
+- "/book/tr/Başlangıç-Yardım-Almak.html"
+- "/book/tr/v1/Başlangıç-Yardım-Almak.html"
 ---
 <h2 id="_git_help">Yardım Almak</h2>
 <div class="paragraph">
