--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Git-Referansları.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Git-Referansları.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Dahili-Git-Ögeleri-Packfiles
 title: Git - Git Referansları
 url: "/book/tr/v2/Dahili-Git-Ögeleri-Git-Referansları.html"
+aliases:
+- "/book/tr/Git-Internals-Git-References.html"
+- "/book/tr/v1/Git-Internals-Git-References.html"
 ---
 <h2 id="_git_refs">Git Referansları</h2>
 <div class="paragraph">
