--- a/external/book/content/book/tr/v2/Git-Temelleri-Değişiklikleri-Geri-Alma.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Değişiklikleri-Geri-Alma.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Uzak-Repo-ile-Çalışmak
 title: Git - Değişiklikleri Geri Alma
 url: "/book/tr/v2/Git-Temelleri-Değişiklikleri-Geri-Alma.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-Değişiklikleri-Geri-Almak.html"
+- "/book/tr/v1/Git-in-Temelleri-Değişiklikleri-Geri-Almak.html"
 ---
 <h2 id="_undoing">Değişiklikleri Geri Alma</h2>
 <div class="paragraph">
