--- a/external/book/content/book/tr/v2/Git-Temelleri-Uzak-Repo-ile-Çalışmak.html
+++ b/external/book/content/book/tr/v2/Git-Temelleri-Uzak-Repo-ile-Çalışmak.html
@@ -17,6 +17,9 @@ book:
     next: book/tr/v2/Git-Temelleri-Etiketleme
 title: Git - Uzak Repo ile Çalışmak
 url: "/book/tr/v2/Git-Temelleri-Uzak-Repo-ile-Çalışmak.html"
+aliases:
+- "/book/tr/Git-in-Temelleri-Uzak-Uçbirimlerle-Çalışmak.html"
+- "/book/tr/v1/Git-in-Temelleri-Uzak-Uçbirimlerle-Çalışmak.html"
 ---
 <h2 id="_remote_repos">Uzak Repo ile Çalışmak</h2>
 <div class="paragraph">
